# TdxHevoSyncTool

./: .gitignore  README.md  TdxHevoSyncTool.spec  build_gui.bat  main.py  pyproject.toml
docs/superpowers/plans/: 2026-03-26-userini-extern-sync.md
docs/superpowers/specs/: 2026-03-26-userini-extern-sync-design.md
src/core/: compare.py  data_items.py  exporter.py  importer.py  tdx_finder.py  tdx_process.py  userini_handler.py  version.py
src/ui/: compare_dialog.py  compare_tree.py  compare_view.py  compare_workers.py  data_panel.py  data_tree.py  help_dialog.py  main_window.py  path_selector.py  progress_dialog.py  rollback_panel.py  theme.py  userini_dialog.py  workers.py
src/utils/: file_ops.py
tests/: test_collect_files_dedup.py  test_collect_files_wildcards.py  test_compare_and_plan.py  test_importer_folder_forbidden.py  test_importer_zip_match.py  test_userini_dialog.py  test_userini_handler.py
