[project]
name = "TdxHevoSyncTool"
version = "1.0.4"
description = "通达信 T0002 配置备份与转移工具"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.4.0",
    "psutil>=5.9.0",
]

[project.scripts]
tdx-sync = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
